Fix stretched main content

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,9 @@
 .full-height {
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    min-height: 80vh;
+}
+
+.stretch {
+    flex: 1;
 }
