--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,13 +1,3 @@
-:host {
-    display: flex;
-    flex-direction: column;
-    min-height: 80vh;
-}
-
-.content {
-    flex: 1;
-}
-
 .send-button {
     width: 169px;
     height: 48px;
@@ -20,4 +10,9 @@
     p {
         margin: 0%;
     }
+}
+
+img {
+    width: 100%;
+    height: auto;
 }
